<resources>
    <string name="app_name">personalAssistant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_chart">报表</string>
    <string name="menu_product">理财产品</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="login_title">用户登录</string>
    <string name="login_name">手机号或邮箱</string>
    <string name="login_pwd">密码：6-64字符</string>
    <string name="login_button">登录</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="sign_up">注册</string>

    <string name="delete">删除</string>
    <string name="income">收</string>
    <string name="pay">支</string>

    <string name="todo_detail">编辑详情</string>

    <string name="count_title">收支统计</string>

</resources>
