<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chart"
            android:icon="@drawable/chart"
            android:title="@string/menu_chart" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/yuan2"
            android:title="@string/menu_product" />
        <item
            android:id="@+id/nav_night"
            android:icon="@drawable/moon"
            android:title="夜间模式"
            app:actionViewClass="android.widget.Switch"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
