<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginLayout"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageButton
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/back_line"></ImageButton>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_title"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:textColor="@color/white"></TextView>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/number"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:hint="@string/login_name"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:layout_marginTop="30dp"
        android:paddingLeft="10dp"
        android:textSize="12sp"
        android:background="@drawable/bg_edittext_normal"></EditText>
    <EditText
        android:id="@+id/login_pwd"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:hint="@string/login_pwd"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:textSize="12sp"
        android:background="@drawable/bg_edittext_normal"
        android:inputType="textPassword"
        ></EditText>
    <Button
        android:id="@+id/login_button"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:hint="@string/login_button"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:textSize="18sp"

        android:textFontWeight="500"
        android:background="@drawable/bg_button_normal"
        android:textColor="#fff"
        >

    </Button>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/forget_pwd"
            android:layout_gravity="left"></TextView>

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_gravity="right"
            android:gravity="right"
            ></TextView>

    </LinearLayout>

</LinearLayout>